--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "illuminate/database": "5.3.*|5.4.*",
-        "illuminate/support": "5.3.*|5.4.*",
-        "illuminate/filesystem": "5.3.*|5.4.*",
-        "illuminate/config": "5.3.*|5.4.*"
+        "php": ">=7.0",
+        "illuminate/database": "5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/support": "5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/filesystem": "5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/config": "5.3.*|5.4.*|5.5.*|5.6.*"
     },
     "autoload": {
         "psr-4": {
